syntax = "proto3";

package pb;

option go_package = "github.com/Arthur199212/microservices-demo/src/payment/pb";

service Payment {
  rpc Charge (ChargeRequest) returns (ChargeResponse) {}
}

message ChargeRequest {
  Money money = 1;
  CardInfo cardInfo = 2;
}

message Money {
  string currencyCode = 1;
  float amount = 2;
}

message CardInfo {
  string number = 1;
  int32 cvv = 2;
  int32 expirationYear = 3;
  int32 expirationMonth = 4;
}

message ChargeResponse {
  string transactionId = 1;
}
